# eraft-io.github.io

./: 15-455-LAB.md  404.html  6_828_LEC0.md  CMU_15721_LEC02.txt  CMU_15_445_LEC_007.txt  CNAME  CONTRIBUTION.md  README.md  README_zh.md  SUMMARY.md  Syllabus.md  _config.yml  blogs  blogs.md  book.json  database_theory.md  deploy_vllm.sh  doc.md  edb  edb.md  ekv.md  index.html  index.md  leader_election  mysql_8_0_build.md  package-lock.json  package.json  search.json  uhp_sql.md
llmcode/: LICENSE  POST_TRAINING.md  README.md  mkdocs.yml  pyproject.toml  requirements-post.txt  requirements.txt  sft_rlhf_guide.ipynb
llmcode/config/: __init__.py  config.py  loader.py  post_training_config.py
llmcode/configs/: base.json  dpo.json  grpo.json  ppo.json  pretrain.json  reward.json  sft.json
llmcode/data_loader/: __init__.py  data_loader.py  preference_dataset.py  prompt_dataset.py  sft_dataset.py
llmcode/docs/: 01_data_pipeline.md  02_pretraining.md  03_sft.md  04_reward_model.md  05_dpo.md  06_ppo.md  07_grpo.md  08_evaluation.md  09_inference.md  README.md
llmcode/scripts/: chat.py  data_download.py  data_preprocess.py  eval_post_training.py  generate_text.py  prepare_preference_data.py  prepare_pretrain_data.py  prepare_rl_prompts.py  prepare_sft_data.py  pretrain_base.py  render_diagrams.sh  run_posttraining.sh  train_dpo.py  train_grpo.py  train_ppo.py  train_reward.py  train_sft.py  train_transformer.py
llmcode/tests/: gpu_verify.sh  grpo_live.py  test_checkpoint_resume.py  test_post_training_smoke.py  test_rl_math.py  verify_data_and_eval.py  verify_rl_optimizes.py
llmcode/ui/: __init__.py  app.py  config_forms.py  docs_render.py  (+5 more)
(+1438 files in other folders)
